--- a/Unsolved/assets/css/style.css
+++ b/Unsolved/assets/css/style.css
@@ -12,5 +12,7 @@ img {
   /* TODO: Add a margin property */
   padding: 20px;
   /* TODO: Add a padding property */
+  margin: 20px;
   /* TODO: Add a border property */
-}
+  border: 7px solid darkblue;
+  
